fix: stretching all components in home page

--- a/recipex-app/src/components/Footer.scss
+++ b/recipex-app/src/components/Footer.scss
@@ -3,7 +3,7 @@
     background-color: #383736;
     display: flex;
     justify-content: center;
-    padding: 8px;
+    padding: 5px;
 
     p{
         color: #FFF; 
