--- a/recipex-app/src/index.scss
+++ b/recipex-app/src/index.scss
@@ -7,8 +7,6 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  display: flex;
-  flex-direction: column;
 }
 
 
